# oarc-regex-pattern-factory

./: README.md  pyproject.toml
docs/: oarc-regex-pattern-factory-guide.md
src/: __init__.py  oarc-pattern-module.py  oarc_pattern_module.py  parquet_storage.py  regex_pattern_extractor.py  regex_pattern_generator.py
